# TinyWindow

./: .coverage  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_DEV.md  TDD_PLAN.md  coverage.xml  example.py  main.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  ci.yml.backup  codeql.yml
agents/: .gitkeep
config/: default.json
data_context/: .gitkeep
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md
evaluation/: .gitkeep
exec_frontend/: .gitkeep
onchain/: .gitkeep
qaqc_stage1/: .gitkeep
qaqc_stage2/: .gitkeep
quantum/: .gitkeep
retrain/: .gitkeep
rust/: Cargo.toml  PORTING.md  README.md  pyproject.toml
rust/encryption_service/: Cargo.toml
rust/encryption_service/src/: lib.rs
rust/exec_adapter_stub/: Cargo.toml
rust/exec_adapter_stub/src/: lib.rs
rust/telemetry/: Cargo.toml
rust/telemetry/src/: lib.rs
src/: README.md  __init__.py
src/agents/: __init__.py
src/core/: __init__.py  config.py  engine.py
src/data_context/: __init__.py  embeddings.py  features.py  (+4 more)
strategy_opt/: .gitkeep
telemetry/: .gitkeep
tests/: __init__.py  test_ablation_and_hyperopt.py  test_adapter_conformance.py  test_agent_interface.py  test_audit_trail_integrity.py  test_context_embeddings.py  test_contracts_agent_onchain_exec.py  test_data_contracts.py  test_distribution_shift_robustness.py  test_explainability_smoke.py  test_global_objective_consistency.py  test_latency_and_throughput.py  test_leakage_guards.py  test_live_feed_staleness.py  test_live_feedback_to_L1.py  test_m0_scaffold.py  test_meta_learning_gain.py  test_model_versioning.py  test_policy_constraints.py  test_pretrade_risk_checks.py  test_quantum_global_opt_mock.py  test_quantum_local_accel_mock.py  test_regression_suite.py  test_retrain_schedule.py  test_revert_and_retry_logic.py  test_reward_functions.py  test_schema_and_integrity.py  test_smoke.py  test_strategy_distribution_to_agents.py  test_telemetry_roundtrip.py  test_tokenization_pipeline.py  test_vault_execution_flow.py
tinywindow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: __init__.py  check_determinism.py  smoke_imports.py
(+39 files in other folders)
