[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Telemetry and metrics collection for TinyWindow"

[lib]
name = "tinywindow_telemetry"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
